Fix 6.5 private chat protocol